# zappy

./: CMakeLists.txt  Makefile  README.md
ai-files/: .#Makefile  Makefile
ai-files/include/: argument.h  broadcast.h  error.h  ia.h  list.h  utils.h
ai-files/include/circular_buffer/: circular_buffer.h
ai-files/include/client/: client.h  client_functions.h  player.h
ai-files/lib/list/: list_add.c  list_delete.c  list_execute.c  list_free.c  list_sort.c
ai-files/src/: .#get_arguments.c  error.c  get_arguments.c  get_arguments_port.c  main.c
ai-files/src/broadcast/: broadcast.c  broadcast_message_group.c  broadcast_message_personal.c  broadcast_message_survive.c  broadcast_send_group.c  broadcast_send_personal.c  broadcast_send_survive.c  utils_message_group.c
ai-files/src/circular_buffer/: circular_buffer.c  circular_buffer_functions.c
ai-files/src/client/: client.c  client_connect.c  client_read.c  client_write.c  player.c  player_global_inventory.c  player_group.c  player_whitelist.c  requisites.c
ai-files/src/commands/: check_ok.c  connect_nbr.c  incantation.c  inventory.c  look.c  parse_inventory.c  parse_look.c  take_set_object.c  welcome.c
ai-files/src/ia/: ia_action.c  ia_move.c  ia_prepare_tile_to_evolve.c  ia_recipes.c  ia_recipes_alone.c  ia_recipes_find_objects.c  ia_recipes_find_resources.c  ia_recipes_group.c  ia_recipes_group_need.c  ia_send_command.c  ia_survive.c
ai-files/src/utils/: free_tab.c  my_strchr.c  my_strtok.c
server-files/: Makefile
server-files/include/: action.h  argument.h  command.h  event.h  list.h  response.h  utils.h
server-files/include/circular_buffer/: circular_buffer.h  circular_buffer_functions.h
server-files/include/drone/: drone.h
server-files/include/server/: server.h  server_functions.h
server-files/include/socket/: socket.h  socket_functions.h
server-files/lib/: Makefile
server-files/lib/list/: list_add.c  list_create.c  list_delete.c  list_execute.c  list_pop.c  list_sort.c
server-files/src/: get_arguments.c  get_arguments_map.c  get_arguments_team.c  main.c
server-files/src/action/: action_ai_action.c  action_ai_broadcast.c  action_ai_eject.c  action_ai_elevation.c  action_ai_fork.c  action_ai_look.c  action_ai_move.c  action_ai_personal.c
server-files/src/circular_buffer/: circular_buffer.c  circular_buffer_functions.c
server-files/src/commands/: commands_ai_action.c  commands_ai_broadcast.c  commands_ai_broadcast_direction.c  commands_ai_eat.c  commands_ai_elevation.c  commands_ai_fork.c  commands_ai_look.c  commands_ai_look_direction.c  commands_ai_move.c  commands_ai_personal.c  commands_ai_static.c~  commands_default.c  commands_graphic_map.c  commands_graphic_player.c  commands_graphic_time.c  commands_setter.c  commands_static.c  commands_unknown.c
server-files/src/drone/: drone.c  drone_egg.c
server-files/src/events/: events_action.c  events_dispatch.c  events_egg.c  events_elevation.c  events_map.c  events_map.c~  events_move.c  events_new_monitor.c  events_player.c
server-files/src/response/: response_graphic_action.c  response_graphic_die.c  response_graphic_egg.c  response_graphic_incantation.c  response_graphic_map.c  response_graphic_player.c  response_graphic_time.c
server-files/src/server/: server.c  server_list.c  (+4 more)
(+9 files in other folders)
